<!--
// string constants from xml: getString(R.string.name_of_definition)
// in xml: android:text="@string/name_of_definition"
-->
<resources>
    <string name="app_name">Board Game Money</string>

    <string name="title_settings_activity">Settings</string>
    <string name="title_lobby_activity">Lobby</string>
    <string name="title_bank_activity">Bank</string>

    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_back">Back</string>

    <!-- MainActivity -->
    <string name="main_menu_settings">Settings</string>

    <string name="main_app_unknown_version">Cannot get current app version.</string>

    <string name="main_btn_find_game">Find Game</string>
    <string name="main_btn_create_game">Create Game</string>
    <string name="main_btn_local_game">Local Game</string>
    <string name="main_iv_game_icon">Game Icon</string>

    <string name="main_dialog_find_user">user_name (at least 4 characters)</string>
    <string name="main_dialog_create_game">game_name (at least 4 characters)</string>
    <string name="no_network_interfaces">No network interfaces available</string>
    <string name="main_dialog_only_bank">Creator only plays the bank</string>
    <string name="main_dialog_pick_a_color">Pick a color</string>
    <string name="main_dialog_add">Add</string>

    <string name="main_return_message_no_user">No user name has been entered.</string>
    <string name="main_return_message_no_game">No game name has been entered.</string>
    <string name="main_return_message_no_network_interface">No network interface has been chosen.</string>
    <string name="main_return_message_other_exit">Server has closed the game.</string>
    <string name="main_return_message_own_exit">Left game.</string>
    <string name="main_return_message_lobby_exit">Game lobby overview closed.</string>
    <string name="main_return_message_invalid_lobby">Lobby entry is invalid.</string>
    <string name="main_create_game_title">Create game</string>
    <string name="main_find_game_title">Find game</string>

    <string name="main_bank_as_name_invalid">You cannot use \'Bank\' as name.</string>
    <string name="main_user_empty">User name cannot be empty.</string>
    <string name="main_user_length_to_low">User name length must be higher equal \'%1$d\'.</string>
    <string name="main_game_empty">Game name cannot be empty.</string>
    <string name="main_game_length_to_low">Game name length must be higher equal \'%1$d\'.</string>

    <string name="main_error_access_game_state">Could not access \'%1$s\'.</string>
    <string name="main_error_game_not_found">Game \'%1$s\' not found.</string>
    <string name="main_error_retrieving_game">Error while retrieving game: \'%1$s\'.</string>

    <string name="main_game_state_title">Game State</string>
    <string name="main_game_state_question">Found game state for game \'%1$s\' with timestamp \'%2$s\'. Do you want to load this state?</string>
    <string name="main_game_state_question_local">Found game state with timestamp \'%1$s\'. Do you want to load this state?</string>

    <!-- LobbyActivity -->
    <string name="lobby_no_game_chosen">No game has been chosen.</string>
    <string name="lobby_entry_empty">No lobby entry has been chosen.</string>
    <string name="lobby_entry_not_found">Lobby entry not found.</string>

    <string name="lobby_btn_join">Join</string>
    <string name="lobby_btn_join_manually">Join manually</string>

    <string name="lobby_join_manually_title">Game connection settings</string>
    <string name="lobby_join_manually_host">IP of host</string>
    <string name="lobby_join_manually_port">Port (12894 or 8081)</string>

    <string name="lobby_ip_empty">IP address must not be empty.</string>
    <string name="lobby_ip_length_to_low">IP address length must be higher equal \'%1$d\'.</string>
    <string name="lobby_port_empty">Port must not be empty.</string>
    <string name="lobby_port_is_not_integer">Port is not an integer.</string>
    <string name="lobby_port_to_low">Port must be higher equal \'%1$d\'.</string>
    <string name="lobby_port_to_high">Port must be lower equal \'%1$d\'.</string>

    <!-- BankActivity -->
    <string name="bank_menu_ledger">Ledger</string>
    <string name="bank_menu_exit">Exit</string>

    <string name="bank_close_title">Close game</string>
    <string name="bank_close_message">Are you sure to close the game?</string>
    <string name="bank_exit_title">Leave game</string>
    <string name="bank_exit_message">Are you sure to leave the game?</string>

    <string name="bank_btn_transfer">Transfer</string>
    <string name="bank_player_not_enough_money">\'%1$s\' has not enough money!</string>
    <string name="bank_player_not_transfer_to_yourself">Cannot transfer money to yourself!</string>

    <string name="bank_ledger_overview">Ledger</string>

    <string name="bank_event_player_joined">Player \'%1$s\' joined the game.</string>
    <string name="bank_event_player_left">Player \'%1$s\' left the game.</string>
    <string name="bank_event_transfer">Transfer #%1$d - %2$s -> %3$s %4$s -> %5$s</string>

    <!-- SettingsActivity -->
    <string name="settings_category_general">General</string>
    <string name="settings_general_locale">Language</string>
    <string name="settings_general_currency_text">Currency symbol (1–3 characters)</string>
    <string name="settings_general_show_events">Show events</string>
    <string name="settings_general_show_ping">Show Ping</string>

    <string name="settings_category_udp_settings">UDP Settings</string>
    <string name="settings_udp_network_interface_name">UDP Network Interface Name</string>
    <string name="settings_udp_multicast_ip">Multicast IP</string>
    <string name="settings_udp_multicast_port">Multicast Port</string>
    <string name="settings_udp_multicast_ttl">Multicast TTL</string>

    <string name="settings_category_tcp_settings">TCP Settings</string>
    <string name="settings_tcp_server_port">Server Port</string>
    <string name="settings_general_communication_wait">Communication Wait(ms)</string>
    <string name="settings_general_communication_wait_summary">Choose a value between 1 and 2500</string>
    <string name="settings_general_bidirectional_timeout">Bidirectional Timeout(ms)</string>
    <string name="settings_general_bidirectional_timeout_summary">Choose a value between 1 and 200</string>
    <string name="settings_tcp_common_passphrase">Common Passphrase</string>
    <string name="settings_tcp_encryption">Use encryption</string>

    <string name="settings_password_dialog_fragment_key_missing">Preference key for password dialog fragment is required.</string>
    <string name="settings_password_dialog_fragment_title_missing">Title for password dialog fragment is required.</string>

    <string name="settings_slider_dialog_fragment_key_missing">Preference key for slider dialog fragment is required.</string>
    <string name="settings_slider_dialog_fragment_title_missing">Title for slider dialog fragment is required.</string>

    <string name="settings_language_changed">Language changed. App will restart in %1$d sec.</string>
    <string name="settings_value_empty">Setting value must not be empty.</string>
    <string name="settings_general_backup_folder_false_start">Backup folder must start with \'Documents/\'.</string>
    <string name="settings_value_is_not_integer">Setting value is not an integer.</string>
    <string name="settings_value_not_https">Setting value does not start with \'https://\'.</string>
    <string name="settings_value_missing_placeholder_one">Setting value does not contain \'%1\'.</string>
    <string name="settings_value_missing_placeholder_two">Setting value does not contain \'%2\'.</string>
    <string name="settings_value_missing_placeholder_three">Setting value does not contain \'%3\'.</string>
    <string name="settings_value_length_to_low">Settings value length must be higher equal \'%1$d\'.</string>
    <string name="settings_value_length_to_high">Settings value length must be lower equal \'%1$d\'.</string>
    <string name="settings_value_to_low">Settings value must be higher equal \'%1$d\'.</string>
    <string name="settings_value_to_high">Settings value must be lower equal \'%1$d\'.</string>
</resources>